# LEMO_Vocabulate

./: .gitignore  Example-notebook.ipynb  LEMO_vocabulate.py  README.md  example_df.csv  generatetxt.py  lemo_vocabulate_example.ipynb  my_test_script.py  output.csv  pyproject.toml  requirements.txt  run_analysis.py  stopwords.txt  test_output.csv  test_run.py
examples/: lemo_vocabulate_example.ipynb  run_analysis.py
lemo_vocabulate/: __init__.py
output/: pandas_output.csv
texts_to_analyze/: file1.txt  file2.txt  file3.txt  text_0.txt  text_1.txt  text_2.txt  text_3.txt  text_4.txt  text_5.txt
