[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lemo-vocabulate"
version = "0.1.0"
description = "Dictionary-based text analysis tool"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lemo_vocabulate*"]
