[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lemo-vocabulate"
version = "0.1.1"
description = "Dictionary-based text analysis tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "tqdm>=4.62.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/Bushel-of-Lemons/LEMO_Vocabulate"
Issues = "https://github.com/Bushel-of-Lemons/LEMO_Vocabulate/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lemo_vocabulate*"]